# cosmo_s

./: .gitignore  pyproject.toml
src/config/: settings.py  urls.py
src/integrations/: models.py
src/integrations/api/: permissions.py  serializers.py  urls.py  views.py
src/integrations/facades/: speedaf.py  unateus.py
src/integrations/migrations/: 0001_initial.py  0002_alter_order_order_id_alter_product_order.py  0003_alter_order_order_id.py  0004_orderspeedaf_productsspeedaf.py
src/integrations/service/: db.py  speedaf_api.py  unateus_integration.py  validation.py  webhook_handler.py
